--- a/cad-GatewayService/src/main/resources/application.properties
+++ b/cad-GatewayService/src/main/resources/application.properties
@@ -1,2 +1,17 @@
 server.port=7085
-
+spring.application.name=api-gateway
+logging.level.root=INFO
+logging.level.org.springframework.cloud.gateway.route.RouteDefinitionRouteLocator=INFO
+logging.level.org.springframework.cloud.gateway=TRACE
+## Product Service Route
+spring.cloud.gateway.routes[0].id=product-service
+spring.cloud.gateway.routes[0].uri=lb://product-service
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/product
+## Discover Server Static Resources Route
+spring.cloud.gateway.routes[3].id=discovery-server-static
+spring.cloud.gateway.routes[3].uri=http://localhost:8761
+spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
+## Order Service Route
+spring.cloud.gateway.routes[1].id=order-service
+spring.cloud.gateway.routes[1].uri=lb://order-service
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/order
